--- a/index.html
+++ b/index.html
@@ -10,43 +10,27 @@
         <div id="calculator">
             <div id="content">
                 <div id="screen">
-                    2+2
+                    <p id="display">2+2</p>
                 </div>
-                <div id="row1">
-                    <button id="clear">AC</button>
-                    <button id="backspace">&#8592</button>
-                </div>
-                <div id="main_buttons">
-                    <div id="left_buttons">
-                        <div id="row2">
-                            <button id="divide">&#247</button>
-                            <button id="multiply">&#215</button>
-                        </div>
-                        <div id="row3">
-                            <button id="seven">7</button>
-                            <button id="eight">8</button>
-                            <button id="nine">9</button>
-                        </div>
-                        <div id="row4">
-                            <button id="four">4</button>
-                            <button id="five">5</button>
-                            <button id="six">6</button>
-                        </div>
-                        <div id="row5">
-                            <button id="one">1</button>
-                            <button id="two">2</button>
-                            <button id="three">3</button>
-                        </div>
-                        <div id="row6">
-                            <button id="zero">0</button>
-                            <button id="point">.</button>
-                        </div>
-                    </div>
-                    <div id="right_buttons">
-                        <button id="subtract">-</button>
-                        <button id="add">+</button>
-                        <button id="equal">=</button>
-                    </div>
+                <div id="calc_buttons">
+                        <button id="clear">AC</button>
+                        <button id="backspace">&#8592</button>
+                        <button id="divide">&#247</button>   
+                        <button id="multiply">&#215</button>  
+                        <button id="subtract">-</button>                      
+                        <button id="seven">7</button>
+                        <button id="eight">8</button> 
+                        <button id="nine">9</button> 
+                        <button id="add">+</button>                         
+                        <button id="four">4</button>
+                        <button id="five">5</button> 
+                        <button id="six">6</button>                          
+                        <button id="one">1</button>
+                        <button id="two">2</button> 
+                        <button id="three">3</button>  
+                        <button id="equal">=</button>                        
+                        <button id="zero">0</button>
+                        <button id="point">.</button>
                 </div>
             </div>
         </div>
