started functional JS for calculator. function logic good for clear and backspace buttons. set button logic for remaining buttons/functions to be completed

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div id="calculator">
             <div id="content">
                 <div id="screen">
-                    <p id="display">2+2</p>
+                    <p id="display"></p>
                 </div>
                 <div id="calc_buttons">
                         <button id="clear">AC</button>
