added decimal rounding and keyboard support as possible for calculator. keyboard support does not work with the clear and backspace functions. also noticed that firefox by default opens quick find when '/' key is pressed... added notes to page explaining this.

--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
                 </div>
             </div>
         </div>
+        <p><i>Note that keyboard functionality is not functional with "AC", "&#8592" and be forewarned that "/" for &#247 will open quick find in firefox by default</i></p>
     </body>
 </html>
